--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,4 +1,4 @@
-<form>
+<form [formGroup]="">
     <div class="form-group">
       <label for="InputUser">User</label>
       <input type="text" class="form-control" id="InputUser" [formControl]="userCtrl">
@@ -8,5 +8,4 @@
       <input type="password" class="form-control" id="InputPassword" [formControl]="passCtrl">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
-    <!--<p>Value: {{userCtrl.value}}</p>-->
 </form>
