--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
       <div class="col-lg-3 bg-warning">
         <app-imagenes></app-imagenes>
       </div>
-      <div class="col-lg-6 bg-primary">
-        Central
+      <div class="col-lg-6 bg-secondary" id="divCentral">
+        <app-registro></app-registro>
       </div>
       <div class="col-lg-3">
         <app-login></app-login>
