--- a/src/app/componentes/imagenes/imagenes.component.html
+++ b/src/app/componentes/imagenes/imagenes.component.html
@@ -1,8 +1,7 @@
-<p>imagenes works!</p>
 <img src="assets/images/img1.jpg" class="img-fluid" alt="Universo">
 <hr>
 <img src="assets/images/img2.jpg" class="img-fluid" alt="Universo 2">
 <hr>
 <img src="assets/images/img3.jpg" class="img-fluid" alt="Universo planetas">
 <hr>
-<img src="assets/images/img4.jpg" class="img-fluid" alt="Universo 3">
+<!--<img src="assets/images/img4.jpg" class="img-fluid" alt="Universo 3">-->
