--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,11 +1,15 @@
-<form [formGroup]="">
+<form [formGroup]="myForm" (ngSubmit)="authUser($event)">
     <div class="form-group">
-      <label for="InputUser">User</label>
-      <input type="text" class="form-control" id="InputUser" [formControl]="userCtrl">
+      <label for="InputUser">Usuario</label>
+      <input type="text" class="form-control" id="InputUser" formControlName="userCtrl" required>
+      <p>
+        <!--<small *ngIf="userCtrl.hasError('requerid')">Campo requerido</small>-->
+      </p>
     </div>
     <div class="form-group">
-      <label for="InputPassword">Password</label>
-      <input type="password" class="form-control" id="InputPassword" [formControl]="passCtrl">
+      <label for="InputPassword">Contraseña</label>
+      <input type="password" class="form-control" id="InputPassword" formControlName="passCtrl" required>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary" [disabled]="myForm.invalid">Ingresar</button>
 </form>
+<a href="">Nuevo Usuario</a>
