--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,14 +10,14 @@
         <app-imagenes></app-imagenes>
       </div>
       <div class="col-lg-6 bg-secondary" id="divCentral">
-        <app-registro></app-registro>
+        <!--<app-registro></app-registro>-->
       </div>
       <div class="col-lg-3">
-        <app-login></app-login>
+        <app-login></app-login> 
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-12 bg-secondary">
+      <div class="col-lg-12 bg-primary">
         <footer>
           <h3>
             Página web desarrollada con angular 10
