--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,15 +1,27 @@
-<form [formGroup]="myForm" (ngSubmit)="authUser($event)">
-    <div class="form-group">
-      <label for="InputUser">Usuario</label>
-      <input type="text" class="form-control" id="InputUser" formControlName="userCtrl" required>
-      <p>
-        <!--<small *ngIf="userCtrl.hasError('requerid')">Campo requerido</small>-->
-      </p>
-    </div>
-    <div class="form-group">
-      <label for="InputPassword">Contraseña</label>
-      <input type="password" class="form-control" id="InputPassword" formControlName="passCtrl" required>
-    </div>
-    <button type="submit" class="btn btn-primary" [disabled]="myForm.invalid">Ingresar</button>
-</form>
-<a href="">Nuevo Usuario</a>
+<div class="card mt-5">
+  <div class="card-body">
+    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+      <div class="form-group">
+        <h2 class="text-Justify">Inicio de Sesión</h2>
+        <label for="InputUser">Usuario</label>
+        <input type="text" class="form-control" id="InputUser" formControlName="userName" required>
+        <p>
+          <small *ngIf="isValidField('userName')">
+            {{getErrorMessage('userName')}}
+          </small>
+        </p>
+      </div>
+      <div class="form-group">
+        <label for="InputPassword">Contraseña</label>
+        <input type="password" class="form-control" id="InputPassword" formControlName="userPass" required>
+        <p>
+          <small *ngIf="isValidField('userPass')">
+            {{getErrorMessage('userPass')}}
+          </small>
+        </p>
+      </div>
+      <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Ingresar</button>
+    </form>
+  </div>
+</div>
+<hr>
