--- a/src/app/componentes/registro/registro.component.html
+++ b/src/app/componentes/registro/registro.component.html
@@ -1,24 +1,54 @@
-<h2>Nuevo Usuario</h2>
-<form [formGroup]="registroUsuForm" (ngSubmit)="addUser($event)">
-    <div class="form-group">
-      <label for="nombre">Nombre Completo:</label>
-      <input type="text" class="form-control" id="nombre" formControlName="Name" required>
-    </div>
-    <div class="form-group">
-        <label for="InputUser">Usuario</label>
-        <input type="text" class="form-control" id="InputUser" formControlName="userName" required>
-    </div>
-    <div class="form-group">
-      <label for="InputPassword">Password</label>
-      <input type="password" class="form-control" id="InputPassword" formControlName="pass" required>
-    </div>
-    <div class="form-group">
-        <label for="confirmPass">Password</label>
-        <input type="password" class="form-control" id="confirmPass" required>
+<div class="card mt-5 my-4 py-4">
+  <div class="card-body">
+    <h2>Nuevo Usuario</h2>
+    <form [formGroup]="registroUsuForm" (ngSubmit)="saveUser(registroUsuForm.value)">
+      <div class="form-group">
+        <label for="nombre">Nombre Completo:</label>
+        <input type="text" class="form-control" id="nombre" formControlName="Name" required>
+        <p>
+          <small *ngIf="isValidField('Name')">
+            {{getErrorMessage('Name')}}
+          </small>
+        </p>
       </div>
-    <div class="form-group">
-        <label for="InputEmail">Email:</label>
-        <input type="email" class="form-control" id="InputEmail" formControlName="email" required>
-    </div>
-    <button type="submit" class="btn btn-primary" [disabled]="registroUsuForm.invalid" onclick="msjUsuarioCreado()">Crear cuenta</button>
-</form>
+      <div class="form-group">
+          <label for="InputUser">Usuario</label>
+          <input type="text" class="form-control" id="InputUser" formControlName="userName" required>
+          <p>
+            <small *ngIf="isValidField('userName')">
+              {{getErrorMessage('userName')}}
+            </small>
+          </p>
+      </div>
+      <div class="form-group">
+        <label for="InputPassword">Password</label>
+        <input type="password" class="form-control" id="InputPassword" formControlName="userPass" required>
+        <p>
+          <small *ngIf="isValidField('userPass')">
+            {{getErrorMessage('userPass')}}
+          </small>
+        </p>
+      </div>
+      <div class="form-group">
+          <label for="confirmPass">Password</label>
+          <input type="password" class="form-control" id="confirmPass" required>
+          <p>
+            <small *ngIf="isValidField('confirmPass')">
+              {{getErrorMessage('confirmPass')}}
+            </small>
+          </p>
+        </div>
+      <div class="form-group">
+          <label for="InputEmail">Email:</label>
+          <input type="email" class="form-control" id="InputEmail" formControlName="email" required>
+          <p>
+            <small *ngIf="isValidField('email')">
+              {{getErrorMessage('email')}}
+            </small>
+          </p>
+      </div>
+      <button type="submit" class="btn btn-primary" [disabled]="registroUsuForm.invalid">Crear Cuenta</button>
+    </form>  
+  </div>
+</div>
+<br>
