--- a/src/app/componentes/imagenes/imagenes.component.html
+++ b/src/app/componentes/imagenes/imagenes.component.html
@@ -5,3 +5,12 @@
 <img src="assets/images/img3.jpg" class="img-fluid" alt="Universo planetas">
 <hr>
 <!--<img src="assets/images/img4.jpg" class="img-fluid" alt="Universo 3">-->
+<img src="" class="rounded float-left" alt="...">
+<h1 class="text-hide" style="background-image: url('...');"></h1>
+
+
+<div class="container-fluid">
+    <div class="col-12">
+
+    </div>
+</div>
