--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,12 +1,12 @@
 <div class="card mt-5">
   <div class="card-body">
-    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+    <form [formGroup]="loginForm" (ngSubmit)="authUser(loginForm.value)">
       <div class="form-group">
         <h2 class="text-Justify">Inicio de Sesión</h2>
         <label for="InputUser">Usuario</label>
         <input type="text" class="form-control" id="InputUser" formControlName="userName" required>
         <p>
-          <small *ngIf="isValidField('userName')">
+          <small class="text-danger" *ngIf="isValidField('userName')">
             {{getErrorMessage('userName')}}
           </small>
         </p>
@@ -15,13 +15,16 @@
         <label for="InputPassword">Contraseña</label>
         <input type="password" class="form-control" id="InputPassword" formControlName="userPass" required>
         <p>
-          <small *ngIf="isValidField('userPass')">
+          <small class="text-danger" *ngIf="isValidField('userPass')">
             {{getErrorMessage('userPass')}}
           </small>
         </p>
       </div>
-      <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Ingresar</button>
+      <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid" (click)="alerta=!alerta">Ingresar</button>
     </form>
+    <div class="alert alert-success" role="alert" *ngIf="alerta">
+      {{msj}}
+    </div>
   </div>
 </div>
 <hr>
