--- a/src/app/componentes/registro/registro.component.html
+++ b/src/app/componentes/registro/registro.component.html
@@ -6,7 +6,7 @@
         <label for="nombre">Nombre Completo:</label>
         <input type="text" class="form-control" id="nombre" formControlName="Name" required>
         <p>
-          <small *ngIf="isValidField('Name')">
+          <small class="text-danger" *ngIf="isValidField('Name')">
             {{getErrorMessage('Name')}}
           </small>
         </p>
@@ -15,40 +15,41 @@
           <label for="InputUser">Usuario</label>
           <input type="text" class="form-control" id="InputUser" formControlName="userName" required>
           <p>
-            <small *ngIf="isValidField('userName')">
+            <small class="text-danger" *ngIf="isValidField('userName')">
               {{getErrorMessage('userName')}}
             </small>
           </p>
       </div>
       <div class="form-group">
-        <label for="InputPassword">Password</label>
+        <label for="InputPassword">Contraseña</label>
         <input type="password" class="form-control" id="InputPassword" formControlName="userPass" required>
         <p>
-          <small *ngIf="isValidField('userPass')">
+          <small class="text-danger" *ngIf="isValidField('userPass')">
             {{getErrorMessage('userPass')}}
           </small>
         </p>
       </div>
       <div class="form-group">
-          <label for="confirmPass">Password</label>
-          <input type="password" class="form-control" id="confirmPass" required>
+          <label for="confirmPass">Confirmar contraseña</label>
+          <input type="password" class="form-control" id="confirmPass" formControlName="confirmPass"required>
           <p>
-            <small *ngIf="isValidField('confirmPass')">
-              {{getErrorMessage('confirmPass')}}
-            </small>
-          </p>
-        </div>
-      <div class="form-group">
-          <label for="InputEmail">Email:</label>
-          <input type="email" class="form-control" id="InputEmail" formControlName="email" required>
-          <p>
-            <small *ngIf="isValidField('email')">
-              {{getErrorMessage('email')}}
+            <small class="text-danger" *ngIf="isValidField('confirmPass')">
+              {{passValidator()}}
             </small>
           </p>
       </div>
+      <div class="form-group">
+        <label for="nombre">Email:</label>
+        <input type="text" class="form-control" id="email" formControlName="Email" required>
+        <p>
+          <small class="text-danger" *ngIf="isValidField('Email')">
+            {{getErrorMessage('Email')}}
+          </small>
+        </p>
+      </div>
       <button type="submit" class="btn btn-primary" [disabled]="registroUsuForm.invalid">Crear Cuenta</button>
-    </form>  
+    </form>
+      
   </div>
 </div>
 <br>
